vaca/nginx-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: vaca
  spec:
    type: ClusterIP
    selector:
      app: vaca
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
