vaca/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaca
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ejemplo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vaca
            port:
              number: 80

#helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
#helm repo update
#helm install nginx-ingress ingress-nginx/ingress-nginx --set controller.publishService.enabled=true
